# papers

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
jaxrl5/: normalization.py  types.py  utils.py
jaxrl5/agents/: __init__.py  agent.py
jaxrl5/agents/bc/: bc_learner.py
jaxrl5/agents/ddpm_iql/: __init__.py  ddpm_iql_learner.py
jaxrl5/agents/drq/: augmentations.py  drq_learner.py
jaxrl5/agents/iql/: iql_learner.py
jaxrl5/agents/pixel_bc/: pixel_bc_learner.py
jaxrl5/agents/sac/: sac_learner.py  sac_learner_wdynamics.py  temperature.py
jaxrl5/agents/td3/: td3_learner.py
jaxrl5/data/: __init__.py  binary_datasets.py  d4rl_datasets.py  dataset.py  memory_efficient_replay_buffer.py  replay_buffer.py
jaxrl5/distributions/: __init__.py  tanh_deterministic.py  tanh_normal.py  tanh_transformed.py
jaxrl5/networks/: __init__.py  diffusion.py  ensemble.py  mlp.py  mlp_resnet.py  pixel_multiplexer.py  resnet.py  state_action_nextstate.py  state_action_value.py
jaxrl5/networks/encoders/: __init__.py  d4pg_encoder.py  ln_resnet_encoder.py
jaxrl5/wrappers/: __init__.py  frame_stack.py  pixels.py  repeat_action.py  single_precision.py  universal_seed.py  wandb_video.py
launcher/: hyperparameters.py
launcher/examples/: train_ddpm_iql_finetune.py  train_ddpm_iql_offline.py
launcher/iql/: train_iql_oneparam.py
papers/rl/agents/: agent.py  common.py
papers/rl/data/: dataset.py  replay_buffer.py
papers/rl/wrappers/: gym.py  single_precision.py
papers/td3/: test.py
