[project]
name = "papers"
version = "0.0.1"
dependencies = [
    "envpool >= 0.8.3",
    "flax >= 0.7.4",
    "jax >= 0.4.14",
    "mypy >= 1.5.1",
    "optax >= 0.1.7",
    "ruff >= 0.0.290",
    "tqdm >= 4.66.1",
    "dm-control >= 1.0.14",
    "rlax >= 0.1.6",
    "hydra-core >= 1.3.2",
    "tensorboardX >= 2.6.2.2"
]

[tool.ruff]
line-length = 100
select = ["ALL"]
ignore = [
    "D100", # Missing docstring in public module # TODO: remove
    "D101", # Missing docstring in public class # TODO: remove
    "D102", # Missing docstring in public method # TODO: remove
    "D103", # Missing docstring in public function # TODO: remove
    "D104", # Missing docstring in public package # TODO: remove
    "D105", # Missing docstring in magic method# TODO: remove
    "D107", # Missing docstring in `__init__` # TODO: remove
    "D213", # `multi-line-summary-second-line`,
    "D203", # `one-blank-line-before-class`
    "ANN101" # Missing type annotation for `self` in method
]

target-version = "py311"

[tool.black]
line-length = 100
