[project]
name = "papers"
version = "0.0.1"
dependencies = [
    "envpool >= 0.8.3",
    "flax >= 0.7.4",
    "jax >= 0.4.14",
    "mypy >= 1.5.1",
    "optax >= 0.1.7",
    "ruff >= 0.0.290",
    "tqdm >= 4.66.1",
    "dm-control >= 1.0.14",
    "rlax >= 0.1.6",
    "hydra-core >= 1.3.2",
    "tensorboardX >= 2.6.2.2"
]

[tool.ruff]
line-length = 100
select = ["ALL"]
ignore = [
    "D",
    "ANN",
    "FBT",
    "FIX002", # Line contains TODO, consider resolving the issue
    "TD003", # Missing issue link on the line following this TODO
    "PLR0913", # Too many arguments to function call
]

target-version = "py311"

[tool.black]
line-length = 100
